Task2/my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app  # Pods with this label will be managed by this deployment
  template:
    metadata:
      labels:
        app: my-app  # The pods will be labeled with this label
    spec:
      containers:
        - name: my-app
          image: <Image path>:latest  # We can replace our app's Docker image
          ports:
            - containerPort: 8080  # The port to which our app exposes
