Task2/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
spec:
  selector:
    app: my-app  # Targets the pods with the "app: my-app" label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
